// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paradox.PersonalityDimensionList renders chart if details disabled 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <p>
      dimension_description, [object Object]
    </p>
    <ul
      className="columns"
    >
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(41,183,112,0.085)",
                "border": "3px solid #29B770",
              }
            }
          >
            <img
              alt="Agreeableness badge, [object Object]"
              src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
            />
          </div>
          <h3>
            Agreeableness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background high"
          style={
            Object {
              "background": "rgba(41,183,112,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(255,204,59,0.085)",
                "border": "3px solid #FFCC3B",
              }
            }
          >
            <img
              alt="Extraversion badge, [object Object]"
              src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
            />
          </div>
          <h3>
            Extraversion
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(255,204,59,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(249,139,28,0.085)",
                "border": "3px solid #F98B1C",
              }
            }
          >
            <img
              alt="Conscientiousness badge, [object Object]"
              src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
            />
          </div>
          <h3>
            Conscientiousness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(249,139,28,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(66,176,219,0.085)",
                "border": "3px solid #42B0DB",
              }
            }
          >
            <img
              alt="Openness badge, [object Object]"
              src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
            />
          </div>
          <h3>
            Openness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(66,176,219,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(239,97,94,0.085)",
                "border": "3px solid #ef615e",
              }
            }
          >
            <img
              alt="Emotional Stability badge, [object Object]"
              src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
            />
          </div>
          <h3>
            Emotional Stability
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background low"
          style={
            Object {
              "background": "rgba(239,97,94,0.1)",
            }
          }
        />
      </li>
    </ul>
    <div
      className="columnsBuffer"
    />
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionList renders component 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <p>
      dimension_description, [object Object]
    </p>
    <ul
      className="columns"
    >
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(41,183,112,0.085)",
                "border": "3px solid #29B770",
              }
            }
          >
            <img
              alt="Agreeableness badge, [object Object]"
              src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
            />
          </div>
          <h3>
            Agreeableness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background high"
          style={
            Object {
              "background": "rgba(41,183,112,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(255,204,59,0.085)",
                "border": "3px solid #FFCC3B",
              }
            }
          >
            <img
              alt="Extraversion badge, [object Object]"
              src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
            />
          </div>
          <h3>
            Extraversion
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(255,204,59,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(249,139,28,0.085)",
                "border": "3px solid #F98B1C",
              }
            }
          >
            <img
              alt="Conscientiousness badge, [object Object]"
              src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
            />
          </div>
          <h3>
            Conscientiousness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(249,139,28,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(66,176,219,0.085)",
                "border": "3px solid #42B0DB",
              }
            }
          >
            <img
              alt="Openness badge, [object Object]"
              src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
            />
          </div>
          <h3>
            Openness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            Object {
              "background": "rgba(66,176,219,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              Object {
                "background": "rgba(239,97,94,0.085)",
                "border": "3px solid #ef615e",
              }
            }
          >
            <img
              alt="Emotional Stability badge, [object Object]"
              src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
            />
          </div>
          <h3>
            Emotional Stability
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background low"
          style={
            Object {
              "background": "rgba(239,97,94,0.1)",
            }
          }
        />
      </li>
    </ul>
    <div
      className="columnsBuffer"
    />
  </div>
  <div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionList renders details if chart disabled 1`] = `
<div
  className="container"
>
  <div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionList renders details if columns disabled 1`] = `
<div
  className="container"
>
  <div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionList renders nothing if disabled 1`] = `null`;

exports[`Paradox.PersonalityDimensionList renders nothing if results not ready 1`] = `null`;
